MB-6703: Incorrect warning in fatbuf_get if size=0

It's just a write to stderr and only in debug builds, but it's
showing up during some unit tests I'm writing so I want to quash it.

Change-Id: I0702dc5cc28622068896d03a1ac7ab3240b5d584
Reviewed-on: http://review.couchbase.org/21001
Tested-by: Aaron Miller <apage43@ninjawhale.com>
Reviewed-by: Aaron Miller <apage43@ninjawhale.com>